# cg

./: README.md
lw1/hangman/: CMakeLists.txt  main.cpp
lw1/hangman/.cursor/rules/: project.mdc
lw1/hangman/data/: words.txt
lw1/hangman/src/: HangmanModel.h  HangmanView.h  HangmanViewModel.hpp  Observer.h  WindowManager.hpp
lw1/hangman/src/model/: HangmanModel.h  WordRepository.h
lw1/hangman/src/view/: AlphabetView.cpp  AlphabetView.h  AlphabetView.hpp  Drawer.cpp  Drawer.h  Drawer.hpp  GameView.cpp  GameView.h  GameView.hpp  HangmanView.h
lw1/hangman/src/viewModel/: HangmanViewModel.hpp
lw1/name-printer/: BouncingObject.h  CMakeLists.txt  Letters.h  main.cpp
lw1/picture/: CMakeLists.txt  DrawableObject.hpp  EricCartman.hpp  main.cpp
lw1/picture/.cursor/rules/: project.mdc
